CHANGES IN VERSION 2.1.4
------------------------
 o formula interface for compareCluster contributed by Giovanni Dall'Olio <2015-02-11, Wed>
 
CHANGES IN VERSION 2.1.3
------------------------
 o update vignettes <2015-01-28, Wed>
 o fully support of using online version of KEGG in enrichKEGG,
   using online version is now by default of enrichKEGG <2015-01-28, Wed>
 o update CITATION <2015-01-28, Wed>
 
CHANGES IN VERSION 2.1.2
------------------------
 o support downloading latest KEGG annotation data <2015-01-27, Tue> 
 o update vignette to use BiocStyle <2015-01-27, Tue>
 
CHANGES IN VERSION 2.1.1
------------------------
 o add BugReports URL <2014-12-17, Wed>

CHANGES IN VERSION 1.99.0
------------------------
 o set version to 1.99.0 and will release version 2.0.0 in next BioConductor release. <2014-09-03, Wed>
   + In version 2.0.0, the package was extended to support about 20 species for both of GO and KEGG analyses.
   + support gene set enrichment analysis algorithm for both of GO and KEGG.
   + support enrichMap visualization.
 o support about 20 species of KEGG analyses. <2014-09-03, Wed>
 o update man file to indicate that enrichGO is now support more than 20 species <2014-09-03, Wed>

CHANGES IN VERSION 1.13.3
------------------------
 o add keepGOlevel, keepGOterm, excludeGOlevel, excludeGOterm, not exported yet <2014-08-28, Thu>

CHANGES IN VERSION 1.13.2
------------------------
 o implement gseGO and gseKEGG for gene set enrichment analysis <2014-07-31, Thu>
 o import enrichMap from DOSE <2014-07-31, Thu>
 o add corresponding section in vignettes <2014-07-31, Thu>

CHANGES IN VERSION 1.13.1
------------------------
 o update man files according to the change of roxygen2 (ver 4.0.0) <2014-05-16, Fri>

CHANGES IN VERSION 1.11.3
------------------------
 o now plotting compareClusterResult support scale the dot size by geneRatio, and it is now setting as default. <2014-01-14, Tue>