@@ -1,5 +1,6 @@
 CHANGES IN VERSION 2.1.4
 ------------------------
+ o add example of formula interface <2015-02-11, Wed>
  o formula interface for compareCluster contributed by Giovanni Dall'Olio <2015-02-11, Wed>
  
 CHANGES IN VERSION 2.1.3
